Enhance Firebase App Check integration, improve FSK validation, and refactor privacy and UI logic
- Add firebase-app-check-key meta tag to all HTML files; remove hardcoded fallback keys from JS configs
- Update firebase-init.js and firebase-config.js to require App Check key via meta/env, improve error handling and logging
- Refactor FSK validation in difficulty-selection.js for stricter server-side checks and better error feedback
- Improve multiplayer-category-selection.js player readiness logic and player key handling
- Refactor multiplayer-difficulty-selection.js for cleaner event listener management and dependency checks
- Enhance join-game.js with robust Firebase readiness checks and improved FSK badge rendering
- Update firebase-auth.js for safer initialization, promise handling, and redirect logic
- Refactor privacy.js: use NocapCookies for consent, improve modal cleanup, TOC insertion, and section toggling
- Improve 404.js and difficulty-selection.js for accessibility, reduced motion, and error handling
- Add getPlayerKey utility, update event listener cleanup, and minor UI/UX improvements across modules

--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
     <meta name="firebase-messaging-sender-id" content="27029260611">
     <meta name="firebase-app-id" content="1:27029260611:web:3c7da4db0bf92e8ce247f6">
     <meta name="firebase-measurement-id" content="G-BNKNW95HK8">
+    <meta name="firebase-app-check-key" content="6LeSPUQsAAAAANnUhOAey-M8Mgr0eeT9-inR7wKZ">
 
     <!-- ✅ PERFORMANCE: Nur benötigte Font-Weights laden (400, 600, 700) -->
     <!-- ✅ P1 STABILITY: preconnect für Google Fonts (verhindert DNS-Lookup-Delay) -->
