--- a/multiplayer-lobby.html
+++ b/multiplayer-lobby.html
@@ -20,6 +20,7 @@
     <meta name="firebase-messaging-sender-id" content="27029260611">
     <meta name="firebase-app-id" content="1:27029260611:web:3c7da4db0bf92e8ce247f6">
     <meta name="firebase-measurement-id" content="G-BNKNW95HK8">
+    <meta name="firebase-app-check-key" content="6LeSPUQsAAAAANnUhOAey-M8Mgr0eeT9-inR7wKZ">
     <!-- Preconnect -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
