Update hosting public directory to 'public' and adjust ignore patterns in firebase.json

--- a/public/jugendschutz.html
+++ b/public/jugendschutz.html
@@ -27,7 +27,7 @@
 </head>
 <body>
 <div class="imprint-container">
-    <a href="/" class="back-button" tabindex="0" aria-label="Zurück zur Startseite">
+    <a href="/public" class="back-button" tabindex="0" aria-label="Zurück zur Startseite">
         ← Zurück zur Startseite
     </a>
 
@@ -277,7 +277,7 @@ Anonymisiert:     192.168.1.0
 
     <footer class="imprint-footer">
         <div class="footer-navigation">
-            <a href="/" class="footer-nav-link" tabindex="0">← Startseite</a>
+            <a href="/public" class="footer-nav-link" tabindex="0">← Startseite</a>
             <a href="/privacy.html" class="footer-nav-link" tabindex="0">📄 Datenschutz</a>
             <a href="/imprint.html" class="footer-nav-link" tabindex="0">📋 Impressum</a>
         </div>
