--- a/difficulty-selection.html
+++ b/difficulty-selection.html
@@ -33,8 +33,8 @@
     <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>🎯</text></svg>">
 
     <!-- ? SECURITY: External CSS ONLY (no inline styles) -->
-    <link rel="stylesheet" href="/assets/css/styles.css?v=2.0">
-    <link rel="stylesheet" href="/assets/css/difficulty-selection.css?v=2.0">
+    <link rel="stylesheet" href="/assets/css/styles.css">
+    <link rel="stylesheet" href="/assets/css/difficulty-selection.css">
 
     <!-- ? SECURITY: DOMPurify lokal gehostet -->
     <script src="/assets/lib/purify.min.js"></script>
