Improve age verification UX: auto-resume category selection, enhance multiplayer FSK handling, and persist verification state

--- a/jugendschutz.html
+++ b/jugendschutz.html
@@ -27,7 +27,7 @@
 </head>
 <body>
 <div class="imprint-container">
-    <a href="/public" class="back-button" tabindex="0" aria-label="Zurück zur Startseite">
+    <a href="/." class="back-button" tabindex="0" aria-label="Zurück zur Startseite">
         ← Zurück zur Startseite
     </a>
 
