Refactor category and difficulty selection UI for improved mobile layout and Firebase rules for multiplayer rounds
- Redesign category selection: remove example questions from HTML, update question count display, and enhance .question-count styling for locked states
- Improve difficulty selection responsiveness: adjust paddings, safe-area handling, and card layouts for mobile devices; refine back button and hover states
- Update Firebase RTDB rules: add support for per-round questions, answers, timers, and summaries; clarify write permissions for host and players; extend validation for new fields
- Enhance category-selection.js: load question counts per category for stability, add descriptions to categoryData, and improve fallback handling
- Set viewport-fit=cover in difficulty-selection.html for better mobile safe-area support

--- a/category-selection.html
+++ b/category-selection.html
@@ -103,17 +103,9 @@
                             Perfekt für Familienabende und gemischte Gruppen.
                         </p>
                         <!-- ? P0 SECURITY: Example questions loaded dynamically via JavaScript -->
-                        <div class="category-examples">
-                            <div class="example-questions" data-category-examples="fsk0">
-                                <!-- Examples will be loaded from secure JSON via DOMPurify -->
-                                <span class="loading-dots">Lade Beispiele...</span>
-                            </div>
-                        </div>
                         <div class="category-footer">
                             <span class="age-range">Ab 0 Jahren</span>
-                            <span class="question-count" data-category-count="fsk0">
-                                <span class="loading-dots">...</span>
-                            </span>
+                            <span class="question-count" data-category-count="fsk0">—</span>
                         </div>
                     </button>
 
@@ -134,16 +126,9 @@
                             Ideal für WG-Partys und Studentenfeiern.
                         </p>
                         <!-- ? P0 SECURITY: Example questions loaded dynamically via JavaScript -->
-                        <div class="category-examples">
-                            <div class="example-questions" data-category-examples="fsk16">
-                                <!-- Examples will be loaded from secure JSON via DOMPurify -->
-                                <span class="loading-dots">Lade Beispiele...</span>
-                            </div>
-                        </div>
                         <div class="category-footer">
                             <span class="age-range">Ab 16 Jahren</span>
-                            <span class="question-count" data-category-count="fsk16">
-                                <span class="loading-dots">...</span>
+                            <span class="question-count" data-category-count="fsk16">—</span>
                             </span>
                         </div>
                         <!-- ? P1 DSGVO/JUGENDSCHUTZ: Lock overlay for age-restricted content -->
@@ -176,16 +161,9 @@
                             Perfekt für enge Freundesgruppen und Paar-Abende.
                         </p>
                         <!-- ? P0 SECURITY: Example questions loaded dynamically via JavaScript -->
-                        <div class="category-examples">
-                            <div class="example-questions" data-category-examples="fsk18">
-                                <!-- Examples will be loaded from secure JSON via DOMPurify -->
-                                <span class="loading-dots">Lade Beispiele...</span>
-                            </div>
-                        </div>
                         <div class="category-footer">
                             <span class="age-range">Nur Erwachsene (18+)</span>
-                            <span class="question-count" data-category-count="fsk18">
-                                <span class="loading-dots">...</span>
+                            <span class="question-count" data-category-count="fsk18">—</span>
                             </span>
                         </div>
                         <!-- ? P1 DSGVO/JUGENDSCHUTZ: Lock overlay for adult content -->
@@ -220,16 +198,9 @@
                             Premium-Content mit den besten Community-Fragen.
                         </p>
                         <!-- ? P0 SECURITY: Example questions loaded dynamically via JavaScript -->
-                        <div class="category-examples">
-                            <div class="example-questions" data-category-examples="special">
-                                <!-- Examples will be loaded from secure JSON via DOMPurify -->
-                                <span class="loading-dots">Lade Beispiele...</span>
-                            </div>
-                        </div>
                         <div class="category-footer">
                             <span class="age-range">Premium Only</span>
-                            <span class="question-count" data-category-count="special">
-                                <span class="loading-dots">...</span>
+                            <span class="question-count" data-category-count="special">—</span>
                             </span>
                         </div>
                         <!-- ? P1 UI/UX: Locked Overlay für Premium-Inhalte -->
