Refactor multiplayer-category-selection.css and multiplayer-difficulty-selection.css for ultra-minimal mobile-first layout: hide non-essential multiplayer UI, streamline category and player name sections, unify card/button styles, and optimize grid and dialog responsiveness

--- a/index.html
+++ b/index.html
@@ -166,17 +166,19 @@
             <p class="hero-subtitle">Für unvergessliche Abende mit Freunden</p>
 
             <div class="game-features">
-                <div class="feature">
-                    <span class="feature-icon" aria-hidden="true">🤔</span>
-                    <span class="feature-text">Schätze, wie viele etwas gemacht haben</span>
-                </div>
-                <div class="feature">
-                    <span class="feature-icon" id="drink-icon" aria-hidden="true">🍻</span>
-                    <span class="feature-text" id="drink-text">Trinke, wenn du falsch liegst</span>
-                </div>
-                <div class="feature">
-                    <span class="feature-icon" aria-hidden="true">🎉</span>
-                    <span class="feature-text">Lache über peinliche Geständnisse</span>
+                <div class="game-features">
+                    <div class="feature">
+                        <span class="feature-icon">❓</span>
+                        <span class="feature-text">Ich habe schon mal...</span>
+                    </div>
+                    <div class="feature">
+                        <span class="feature-icon">🤫</span>
+                        <span class="feature-text">Alle antworten geheim</span>
+                    </div>
+                    <div class="feature">
+                        <span class="feature-icon">🎯</span>
+                        <span class="feature-text">Jeder schätzt</span>
+                    </div>
                 </div>
             </div>
 
